GNOME Bugzilla – Bug 724310
fetcher: set timeouts on HTTP connections
Last modified: 2014-02-13 17:23:28 UTC
Soup has no HTTP timeouts by default. Set these, maybe it helps with some ostree fetch hangs we are seeing.
Created attachment 269043 [details] [review] fetcher: set timeouts on HTTP connections We're seeing some hangs while ostree is fetching updates. I imagine the fact that SoupSessionAsync has no timeout by default could be the cause of this. Set timeout values to 60 seconds, which is the default for the new SoupSession API which we may switch to later.
Review of attachment 269043 [details] [review]: Yes, looks reasonable to me. Thanks! I think at least yum has logic to detect "too slow" connections, something like "under 1000 bytes/sec". (I'd consider switching to a newer libsoup, it looks like both Debian jessie and RHEL 7 beta have glib 2.36, and both have at least libsoup-2.42)
Comment on attachment 269043 [details] [review] fetcher: set timeouts on HTTP connections Thanks for the fast review, pushed.